--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,10 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Indaprojekt/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/slick.jar"/>
+	<classpathentry kind="lib" path="lib/slick.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Fredrik/Kth/Progaming/Uppgifter/Eclipse/Slick/javadoc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
